--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,24 @@ services:
     build: .
     container_name: gtu-auth-service
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:h2:file:/data/reset_tokens
+      - SPRING_DATASOURCE_USERNAME=${DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}
       - EUREKA_SERVER_HOST=discovery-server
       - EUREKA_SERVER_PORT=8761
-      - SERVER_PORT=0
       - SWAGGER_SERVER_URL=${SWAGGER_SERVER_URL}
-      - JWT_SECRET=LbKuwcGpBGZm5tKJ7MmYQa9NfKtJzYMkVwsDsbUwKyA=
+      - SPRING_RABBITMQ_HOST=${RABBITMQ_HOST}
+      - SPRING_RABBITMQ_PORT=5672
+      - SPRING_RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - SPRING_RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
+      - RESET_LINK_PASSENGER=https://frontend-app.com/reset-password
+      - RESET_LINK_DRIVER=https://frontend-app.com/reset-password
+      - RESET_LINK_ADMIN=https://frontend-app.com/reset-password
+      - RESET_LINK_SUPERADMIN=https://frontend-app.com/reset-password
+      - SERVER_PORT=0
+    volumes:
+      - ./data:/data
     networks:
       - shared_network
 networks:
