Add environment specification to build job in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     name: Build and analyze
+    environment: prod
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
