Consolidate reset link properties in docker-compose.yml and application.properties for consistency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,6 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 rabbitmq.exchange.reset=reset-password.exchange
 rabbitmq.routingkey.reset=reset-password.routingkey
 
-reset.links.passenger=${RESET_LINK_PASSENGER}
-reset.links.driver=${RESET_LINK_DRIVER}
-reset.links.admin=${RESET_LINK_ADMIN}
-reset.links.superadmin=${RESET_LINK_SUPERADMIN}
+reset.links.base=${RESET_LINKS_BASE}
 
 
